--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <label for="priority-dropdown">Task priority:</label>
+      <select id="priority-dropdown" name="priority-dropdown">
+        <option value="1">Low</option>  
+        <option value="2">Medium</option>  
+        <option value="3">High</option>   
+      </select>
       <input type="submit" value="Create New Task">
     </form>
 
